@@ -52,6 +52,7 @@
  * #1432 (Expected improvement-based EfficientGlobalOptimization stopping criterion could be improved)
  * #1437 (OrderStatisticsMarginalChecker bound message)
  * #1438 (Normal distribution: computeComplementaryCDF)
+ * #1449 (P1LagrangeInterpolation sometimes fails)
 
 == 1.14 release (2019-11-13) == #release-1.14
 
